name:               webcrank-wai
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Richard Wallace <rwallace@thewallacepack.net>
maintainer:         Richard Wallace <rwallace@thewallacepack.net>
copyright:          (c) 2015 Richard Wallace
synopsis:           Build a WAI Application from Webcrank Resources
category:           Web
homepage:           https://github.com/webcrank/webcrank-wai
bug-reports:        https://github.com/webcrank/webcrank-wai/issues
cabal-version:      >= 1.8
build-type:         Simple
description:
  Build a WAI Application from Webcrank Resources.

source-repository   head
  type:             git
  location:         https://github.com/webcrank/webcrank-wai.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  build-depends:    base                            >= 4.6 && < 5
                  , bytestring
                  , containers
                  , exceptions
                  , mtl
                  , transformers
                  , unix-compat
                  , wai
                  , webcrank
                  , webcrank-dispatch

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Webcrank.Wai

